--- a/public/static/cart.html
+++ b/public/static/cart.html
@@ -10,12 +10,12 @@
 </head>
 <body class="bg-gray-100">
     <!-- Header -->
-    <div class="header fixed top-0 left-0 right-0 z-10 flex items-center justify-between p-4">
+    <div class="header fixed top-0 left-0 right-0 z-10 flex items-center justify-between p-4 bg-green-600 text-white">
         <a href="/">
             <img src="/public/assets/PointaFam.jpg" alt="PointaFam Logo" class="h-10">
         </a>
         <h1 class="text-xl font-bold mx-auto">Cart</h1>
-        <a href="/retailer_dashboard" class="text-white hover:text-gray-200 transition duration-200">
+        <a href="/retailer/dashboard" class="text-white hover:text-gray-200 transition duration-200">
             <i class="fas fa-arrow-left text-2xl"></i>
         </a>
     </div>
@@ -24,29 +24,15 @@
     <div class="container mx-auto p-6 mt-16">
         <h2 class="text-2xl font-bold mb-6">Your Cart</h2>
         <div id="cart-items" class="space-y-4">
-            <!-- Example Cart Item -->
-            <div class="cart-item">
-                <div class="flex justify-between items-center">
-                    <div class="flex items-center">
-                        <img src="https://via.placeholder.com/50" alt="Product Image" class="w-12 h-12 rounded-lg mr-4">
-                        <div>
-                            <h3 class="text-lg font-semibold">Product Name</h3>
-                            <p class="text-gray-600">Quantity: 2</p>
-                        </div>
-                    </div>
-                    <div class="text-right">
-                        <p class="text-lg font-bold">$20.00</p>
-                        <button class="text-red-500 hover:text-red-600">
-                            <i class="fas fa-trash"></i>
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <!-- End of Example Cart Item -->
+            <!-- Cart items will be dynamically loaded here -->
+        </div>
+        <div id="empty-cart-message" class="hidden text-center text-gray-600">
+            <p class="text-2xl">Your cart is empty 😢</p>
+            <p class="mt-2">Add some products to get started!</p>
         </div>
         <div class="mt-6">
-            <h3 class="text-xl font-bold">Total: $<span id="cart-total">40.00</span></h3>
-            <button onclick="checkout()" class="checkout-button p-3 rounded-lg w-full mt-4">
+            <h3 class="text-xl font-bold">Total: $<span id="cart-total">0.00</span></h3>
+            <button onclick="checkout()" class="checkout-button p-3 rounded-lg w-full mt-4 bg-green-600 text-white hover:bg-green-700 transition duration-200">
                 Proceed to Checkout
             </button>
         </div>
