--- a/public/static/retailer_dashboard.html
+++ b/public/static/retailer_dashboard.html
@@ -7,10 +7,52 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="/public/css/styles.css">
+    <style>
+        /* Custom CSS to make the sidebar fixed */
+        .sidebar {
+            position: fixed;
+            top: 64px; /* Height of the header */
+            left: 0;
+            bottom: 0;
+            width: 16rem; /* Width of the sidebar */
+            overflow-y: auto; /* Enable scrolling if content overflows */
+            display: flex;
+            flex-direction: column;
+        }
+
+        .main-content {
+            margin-left: 16rem; /* Match the width of the sidebar */
+            margin-top: 64px; /* Height of the header */
+            padding: 1.5rem;
+            overflow-y: auto; /* Enable scrolling for main content */
+        }
+
+        .header {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            z-index: 50;
+        }
+
+        .footer {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            z-index: 50;
+        }
+
+        .profile-section {
+            margin-top: auto; /* Push profile section to the bottom */
+            padding: 1.5rem;
+            border-top: 1px solid rgba(255, 255, 255, 0.1); /* Add a subtle border */
+        }
+    </style>
 </head>
 <body class="bg-gray-100">
     <!-- Header -->
-    <header class="header bg-green-600 text-white fixed top-0 left-0 right-0 z-50 shadow-md">
+    <header class="header bg-green-600 text-white shadow-md">
         <div class="container mx-auto flex items-center justify-between p-4">
             <a href="/">
                 <img src="/public/assets/PointaFam.jpg" alt="PointaFam Logo" class="h-10">
@@ -22,10 +64,9 @@
         </div>
     </header>
 
-    <!-- Content -->
-    <div class="content flex mt-16">
-        <!-- Sidebar -->
-        <div class="sidebar bg-green-600 text-white w-64 flex-shrink-0 p-6 shadow-lg">
+    <!-- Sidebar -->
+    <div class="sidebar bg-green-600 text-white shadow-lg">
+        <div class="p-6">
             <h2 class="text-2xl font-bold mb-6">Dashboard</h2>
             <ul>
                 <li class="mb-4">
@@ -41,75 +82,73 @@
             </ul>
         </div>
 
-        <!-- Main Content -->
-        <div class="main-content flex-1 p-6 overflow-y-auto">
-            <!-- Welcome Section -->
-            <div class="card bg-white rounded-lg shadow-md p-6 mb-6">
-                <h2 class="text-2xl font-bold mb-4">Welcome to your Dashboard</h2>
-                <p class="text-gray-600">Manage your products, view your cart, and update your profile.</p>
-            </div>
-
-            <!-- Available Products Section -->
-            <div id="products-section" class="mb-6">
-                <h2 class="text-2xl font-bold mb-4">Available Products</h2>
-                <div class="mb-4">
-                    <label for="category" class="block text-gray-700 mb-2">Select Category:</label>
-                    <select id="category" class="form-input w-full" onchange="loadProducts(this.value)">
-                        <option value="">All</option>
-                        <option value="vegetables">Vegetables</option>
-                        <option value="fruits">Fruits</option>
-                        <option value="dairy">Dairy</option>
-                    </select>
-                </div>
-                <div id="products-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-                    <!-- Products will be dynamically loaded here -->
+        <!-- Profile Section in Sidebar -->
+        <div class="profile-section">
+            <div class="flex items-center mb-4">
+                <div class="relative">
+                    <img id="profile-picture" src="profile_picture_url" alt="Profile Picture" class="w-10 h-10 rounded-full mr-4 cursor-pointer" onclick="document.getElementById('profile-picture-input').click()">
+                    <input type="file" id="profile-picture-input" class="hidden" onchange="uploadProfilePicture(event)">
                 </div>
             </div>
+            <button onclick="toggleDropdown('edit-profile-form')" class="btn-primary w-full mb-2">Edit Profile</button>
+        </div>
+    </div>
 
-            <!-- Manage Profile Section -->
-            <div id="manage-profile" class="mb-6">
-                <h2 class="text-2xl font-bold mb-4">Manage Profile</h2>
-                <div class="card bg-white rounded-lg shadow-md p-6">
-                    <div class="flex items-center mb-4">
-                        <div class="relative">
-                            <img id="profile-picture" src="profile_picture_url" alt="Profile Picture" class="w-16 h-16 rounded-full mr-4 cursor-pointer" onclick="document.getElementById('profile-picture-input').click()">
-                            <input type="file" id="profile-picture-input" class="hidden" onchange="uploadProfilePicture(event)">
-                        </div>
-                        <div>
-                            <p id="user-username" class="text-lg font-bold">Loading...</p>
-                            <p id="user-email" class="text-gray-600">Loading...</p>
-                            <p id="user-location" class="text-gray-600">Loading...</p>
-                        </div>
-                    </div>
-                    <button onclick="toggleDropdown('edit-profile-form')" class="btn-primary">Edit Profile</button>
-                </div>
+    <!-- Main Content -->
+    <div class="main-content bg-gray-100">
+        <!-- Welcome Section -->
+        <div class="card bg-white rounded-lg shadow-md p-6 mb-6">
+            <h2 class="text-2xl font-bold mb-4">Welcome to your Dashboard</h2>
+            <p class="text-gray-600">Manage your products, view your cart, and update your profile.</p>
+        </div>
+
+        <!-- Available Products Section -->
+        <div id="products-section" class="mb-6">
+            <h2 class="text-2xl font-bold mb-4">Available Products</h2>
+            <div class="mb-4">
+                <label for="category" class="block text-gray-700 mb-2">Select Category:</label>
+                <select id="category" class="form-input w-full" onchange="loadProducts(this.value)">
+                    <option value="">All</option>
+                    <option value="vegetables">Vegetables</option>
+                    <option value="fruits">Fruits</option>
+                    <option value="dairy">Dairy</option>
+                </select>
             </div>
-
-            <!-- Edit Profile Form -->
-            <div id="edit-profile-form" class="hidden">
-                <form id="update-profile-form" onsubmit="handleProfileUpdate(event)" class="bg-white rounded-lg shadow-md p-6">
-                    <div class="mb-4">
-                        <input type="text" id="edit-username" name="username" placeholder="Username" class="form-input w-full" required>
-                    </div>
-                    <div class="mb-4">
-                        <input type="email" id="edit-email" name="email" placeholder="Email" class="form-input w-full" required>
-                    </div>
-                    <div class="mb-4">
-                        <input type="text" id="edit-location" name="location" placeholder="Location" class="form-input w-full" required>
-                    </div>
-                    <button type="submit" class="btn-primary">Update Profile</button>
-                </form>
+            <div id="products-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+                <!-- Products will be dynamically loaded here -->
             </div>
         </div>
     </div>
 
     <!-- Footer -->
-    <footer class="footer bg-green-600 text-white fixed bottom-0 left-0 right-0 z-50 shadow-md">
+    <footer class="footer bg-green-600 text-white shadow-md">
         <div class="container mx-auto text-center p-4">
             <p>&copy; 2025 PointaFam. All rights reserved.</p>
         </div>
     </footer>
 
     <script src="/public/script/script.js"></script>
+    <script>
+
+        function loadProducts(category = "") {
+            const productsListContainer = document.getElementById('products-list');
+            productsListContainer.innerHTML = ""; 
+            const filteredProducts = category ? products.filter(product => product.category === category) : products;
+
+            filteredProducts.forEach(product => {
+                const productElement = document.createElement('div');
+                productElement.className = 'card bg-white rounded-lg shadow-md p-6';
+                productElement.innerHTML = `
+                    <h3 class="text-lg font-semibold">${product.name}</h3>
+                    <p class="text-gray-600">Price: ${product.price}</p>
+                    <p class="text-gray-600">Quantity: ${product.quantity}</p>
+                `;
+                productsListContainer.appendChild(productElement);
+            });
+        }
+
+    
+        loadProducts();
+    </script>
 </body>
 </html>
